--- a/src/styles.css
+++ b/src/styles.css
@@ -13,8 +13,7 @@
 .main-container{   
 
     padding:40px;
-    background-image: url(./assets/sunny-day.jpg);
-    
+    background-image: url(./assets/sunny-day.jpg);    
     display:grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -55,10 +54,14 @@
     border-radius: 10px;
 
 }
-.ten-day-forecast{
+.five-day-forecast{
     background: #f0c9c9;
     grid-area: ten-day-fcast;
     border-radius: 10px;
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+
 }
 
 .main-container{
